--- a/src/components/Header/animationHeader.module.css
+++ b/src/components/Header/animationHeader.module.css
@@ -1,18 +1,3 @@
-.header {
-  animation-name: headerMove;
-  animation-duration: 1s;
-  animation-delay: 1s;
-  animation-fill-mode: forwards;
-}
-
-@keyframes headerMove {
-  from {}
-  
-  to {
-    margin-top: 1rem;
-  }
-}
-
 @media (min-width: 1024px) { 
   @keyframes headerMove {
     from {}
@@ -22,6 +7,7 @@
     }
   }
 }
+
 .background {
   animation: background;
   animation-duration: 35s;
@@ -69,7 +55,7 @@
 }
 
 .containerTitle {
-  animation: reScale 2s ease-out;
+  animation: reScale 300ms ease-out;
   animation-fill-mode: forwards;
 }
 
